Segmentize: replaced LinkedList with ArrayList for speed.